# NoviCode

./: LICENSE  README.md  pyproject.toml  setup.sh
examples/: aframe_example.html  pandas_example.py  python_basic_example.py
novicode/: __init__.py  agent_loop.py  challenges.py  cli.py  config.py  curriculum.py  formatter.py  imgcat.py  input_reader.py  llm_adapter.py  main.py  metrics.py  policy_engine.py  progress.py  py5_runner.py  security_manager.py  session_manager.py  spinner.py  tool_registry.py  validator.py
novicode/tools/: bash_tool.py  edit_tool.py  glob_tool.py  grep_tool.py  read_tool.py  write_tool.py
rnnr/: __init__.py  agent_loop.py  cli.py  config.py  llm_adapter.py  main.py  metrics.py  policy_engine.py  security_manager.py  session_manager.py  tool_registry.py  validator.py
rnnr/tools/: bash_tool.py  edit_tool.py  glob_tool.py  grep_tool.py  read_tool.py  write_tool.py
tests/: test_adversarial.py  test_agent_loop.py  test_bash_tool.py  test_challenges.py  test_config.py  test_conversation_flow.py  test_curriculum.py  test_formatter.py  test_imgcat.py  test_llm_adapter.py  test_policy.py  test_progress.py  test_py5_runner.py  test_security.py  test_spinner.py  test_stress.py  test_validator.py
