[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novicode"
version = "0.1.0"
description = "Vibe coding tool specialized for learning programming and app development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["pygments>=2.17"]
keywords = ["ai", "coding-agent", "education", "curriculum", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
novicode = "novicode.main:main"

[tool.setuptools.packages.find]
include = ["novicode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
py5 = ["py5>=0.8"]
sklearn = ["scikit-learn>=1.4", "numpy>=1.26"]
pandas = ["pandas>=2.2", "matplotlib>=3.8", "seaborn>=0.13"]
all = [
    "py5>=0.8",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[dependency-groups]
dev = ["pytest>=8.0"]
